:recycle: add results

--- a/index.html
+++ b/index.html
@@ -322,14 +322,15 @@
                     </div> 
                 </div>
             </div> 
+            <h5 class="title">ResNet34</h5>
             <div class="row grid">
                 <div class="col-lg-4 col-sm-6 grid-item apps creative laptop">
                     <div class="single-gallery gallery-masonry mt-30">
                         <div class="gallery-image">
-                            <img src="assets/images/protfolio-1.jpg" alt="protfolio">
+                            <img src="img/results/resnet/resnet1.png" alt="protfolio">
                         </div>
                         <div class="gallery-icon">
-                            <a class="image-popup" href="assets/images/protfolio-1.jpg">
+                            <a class="image-popup" href="img/results/resnet/resnet1.png">
                                 <span></span>
                             </a>
                         </div>
@@ -338,10 +339,10 @@
                 <div class="col-lg-4 col-sm-6 grid-item branding creative">
                     <div class="single-gallery gallery-masonry mt-30">
                         <div class="gallery-image">
-                            <img src="assets/images/protfolio-2.jpg" alt="protfolio">
+                            <img src="img/results/resnet/resnet2.png" alt="protfolio">
                         </div>
                         <div class="gallery-icon">
-                            <a class="image-popup" href="assets/images/protfolio-2.jpg">
+                            <a class="image-popup" href="img/results/resnet/resnet2.png">
                                 <span></span>
                             </a>
                         </div>
@@ -350,10 +351,10 @@
                 <div class="col-lg-4 col-sm-6 grid-item apps branding product">
                     <div class="single-gallery gallery-masonry mt-30">
                         <div class="gallery-image">
-                            <img src="assets/images/protfolio-3.jpg" alt="protfolio">
+                            <img src="img/results/resnet/resnet3.png" alt="protfolio">
                         </div>
                         <div class="gallery-icon">
-                            <a class="image-popup" href="assets/images/protfolio-3.jpg">
+                            <a class="image-popup" href="img/results/resnet/resnet3.png">
                                 <span></span>
                             </a>
                         </div>
@@ -362,10 +363,10 @@
                 <div class="col-lg-4 col-sm-6 grid-item laptop product">
                     <div class="single-gallery gallery-masonry mt-30">
                         <div class="gallery-image">
-                            <img src="assets/images/protfolio-5.jpg" alt="protfolio">
+                            <img src="img/results/resnet/resnet4.png" alt="protfolio">
                         </div>
                         <div class="gallery-icon">
-                            <a class="image-popup" href="assets/images/protfolio-5.jpg">
+                            <a class="image-popup" href="img/results/resnet/resnet4.png">
                                 <span></span>
                             </a>
                         </div>
@@ -374,10 +375,10 @@
                 <div class="col-lg-4 col-sm-6 grid-item branding creative">
                     <div class="single-gallery gallery-masonry mt-30">
                         <div class="gallery-image">
-                            <img src="assets/images/protfolio-4.jpg" alt="protfolio">
+                            <img src="img/results/resnet/resnet5.png" alt="protfolio">
                         </div>
                         <div class="gallery-icon">
-                            <a class="image-popup" href="assets/images/protfolio-4.jpg">
+                            <a class="image-popup" href="img/results/resnet/resnet5.png">
                                 <span></span>
                             </a>
                         </div>
@@ -386,10 +387,158 @@
                 <div class="col-lg-4 col-sm-6 grid-item apps laptop product">
                     <div class="single-gallery gallery-masonry mt-30">
                         <div class="gallery-image">
-                            <img src="assets/images/protfolio-6.jpg" alt="protfolio">
+                            <img src="img/results/resnet/resnet8.png" alt="protfolio">
                         </div>
                         <div class="gallery-icon">
-                            <a class="image-popup" href="assets/images/protfolio-6.jpg">
+                            <a class="image-popup" href="img/results/resnet/resnet8.png">
+                                <span></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 grid-item apps laptop product">
+                    <div class="single-gallery gallery-masonry mt-30">
+                        <div class="gallery-image">
+                            <img src="img/results/resnet/resnet6.png" alt="protfolio">
+                        </div>
+                        <div class="gallery-icon">
+                            <a class="image-popup" href="img/results/resnet/resnet6.png">
+                                <span></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 grid-item branding creative">
+                    <div class="single-gallery gallery-masonry mt-30">
+                        <div class="gallery-image">
+                            <img src="img/results/resnet/resnet7.png" alt="protfolio">
+                        </div>
+                        <div class="gallery-icon">
+                            <a class="image-popup" href="img/results/resnet/resnet7.png">
+                                <span></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 grid-item apps laptop product">
+                    <div class="single-gallery gallery-masonry mt-30">
+                        <div class="gallery-image">
+                            <img src="img/results/resnet/resnet9.png" alt="protfolio">
+                        </div>
+                        <div class="gallery-icon">
+                            <a class="image-popup" href="img/results/resnet/resnet9.png">
+                                <span></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div> 
+            <br>
+            <h5 class="title">VGG19</h5>
+            <div class="row grid">
+                <div class="col-lg-4 col-sm-6 grid-item apps creative laptop">
+                    <div class="single-gallery gallery-masonry mt-30">
+                        <div class="gallery-image">
+                            <img src="img/results/vgg/vgg1.png" alt="protfolio">
+                        </div>
+                        <div class="gallery-icon">
+                            <a class="image-popup" href="img/results/vgg/vgg1.png">
+                                <span></span>
+                            </a>
+                        </div>
+                    </div> <!-- single gallery -->
+                </div>
+                <div class="col-lg-4 col-sm-6 grid-item branding creative">
+                    <div class="single-gallery gallery-masonry mt-30">
+                        <div class="gallery-image">
+                            <img src="img/results/vgg/vgg2.png" alt="protfolio">
+                        </div>
+                        <div class="gallery-icon">
+                            <a class="image-popup" href="img/results/vgg/vgg2.png">
+                                <span></span>
+                            </a>
+                        </div>
+                    </div> <!-- single gallery -->
+                </div>
+                <div class="col-lg-4 col-sm-6 grid-item apps branding product">
+                    <div class="single-gallery gallery-masonry mt-30">
+                        <div class="gallery-image">
+                            <img src="img/results/vgg/vgg3.png" alt="protfolio">
+                        </div>
+                        <div class="gallery-icon">
+                            <a class="image-popup" href="img/results/vgg/vgg3.png">
+                                <span></span>
+                            </a>
+                        </div>
+                    </div> <!-- single gallery -->
+                </div>
+                <div class="col-lg-4 col-sm-6 grid-item laptop product">
+                    <div class="single-gallery gallery-masonry mt-30">
+                        <div class="gallery-image">
+                            <img src="img/results/vgg/vgg4.png" alt="protfolio">
+                        </div>
+                        <div class="gallery-icon">
+                            <a class="image-popup" href="img/results/vgg/vgg4.png">
+                                <span></span>
+                            </a>
+                        </div>
+                    </div> <!-- single gallery -->
+                </div>
+                <div class="col-lg-4 col-sm-6 grid-item branding creative">
+                    <div class="single-gallery gallery-masonry mt-30">
+                        <div class="gallery-image">
+                            <img src="img/results/vgg/vgg5.png" alt="protfolio">
+                        </div>
+                        <div class="gallery-icon">
+                            <a class="image-popup" href="img/results/vgg/vgg5.png">
+                                <span></span>
+                            </a>
+                        </div>
+                    </div> 
+                </div>
+                <div class="col-lg-4 col-sm-6 grid-item apps laptop product">
+                    <div class="single-gallery gallery-masonry mt-30">
+                        <div class="gallery-image">
+                            <img src="img/results/vgg/vgg8.png" alt="protfolio">
+                        </div>
+                        <div class="gallery-icon">
+                            <a class="image-popup" href="img/results/vgg/vgg8.png">
+                                <span></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 grid-item apps laptop product">
+                    <div class="single-gallery gallery-masonry mt-30">
+                        <div class="gallery-image">
+                            <img src="img/results/vgg/vgg6.png" alt="protfolio">
+                        </div>
+                        <div class="gallery-icon">
+                            <a class="image-popup" href="img/results/vgg/vgg6.png">
+                                <span></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 grid-item branding creative">
+                    <div class="single-gallery gallery-masonry mt-30">
+                        <div class="gallery-image">
+                            <img src="img/results/vgg/vgg7.png" alt="protfolio">
+                        </div>
+                        <div class="gallery-icon">
+                            <a class="image-popup" href="img/results/vgg/vgg7.png">
+                                <span></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 grid-item apps laptop product">
+                    <div class="single-gallery gallery-masonry mt-30">
+                        <div class="gallery-image">
+                            <img src="img/results/resnet/resnet9.png" alt="protfolio">
+                        </div>
+                        <div class="gallery-icon">
+                            <a class="image-popup" href="img/results/resnet/resnet9.png">
                                 <span></span>
                             </a>
                         </div>
