--- a/index.html
+++ b/index.html
@@ -279,13 +279,14 @@
     <section id="blog" class="service-area pt-105">
         <div class="container">
             <div class="row">
+                <h1 class="title">Discussion</h1>
+                <br><br><br>
+                <p class="text" style="text-align: justify;">
+                    Due to the pandemic situation, it is impossible to enter public facilities without wearing a face mask. It is not efficient to check people one by one to see if they are wearing a mask or not. Thus, the face mask detection model can be developed into a program that automatically determines if the person is properly wearing a mask or not by using a camera.
+                </p><br><br>
                 <div class="col-lg-6 col-md-8">
                     <div class="section-title wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
-                        <h4 class="title">Discussion</h4>
-                        <br>
-                        <p class="text" style="text-align: justify;">
-                            Due to the pandemic situation, it is impossible to enter public facilities without wearing a face mask. It is not efficient to check people one by one to see if they are wearing a mask or not. Thus, the face mask detection model can be developed into a program that automatically determines if the person is properly wearing a mask or not by using a camera.
-                        </p>
+                  
                         <br><br>
                         <h6>Changing from Haar cascade to MTCNN</h6>
                         <p style="text-align: justify;">
@@ -311,6 +312,9 @@
                 <div class="col-lg-6 col-md-8">
                     <div class="section-title wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
                         <img src="img/discuss.png" width="100%"/>
+                        <br><br><br><br>
+                        <h3>Presentation Video</h3><br><br>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/q1WeJczIj8w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div> 
                 </div>
             </div>
